# scroll-prover

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.run_testnet_gpu  LICENSE-MIT  Makefile  README.md  README.tr.md  batch.sh  circuit-assets.md  circuit-assets.txt  curl_prove.sh  debug_batch.sh  download_params.sh  download_setup.sh  e2e.sh  failure-3.out  mock.sh  params-sha256sum  profile_mock.sh  realtrace.sh  release-latest  release.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml  test-agg.sh  test_4_chunks.sh  test_batch_verify.sh  test_seed  utils.sh
aggregator/: Cargo.toml
aggregator/src/: batch.rs  chunk.rs  circuit.rs  config.rs  lib.rs  proof_aggregation.rs  public_input_aggregation.rs  sub_circuit.rs  super_aggregation_circuit.rs  tests.rs  util.rs
aggregator/src/proof_aggregation/: circuit.rs  config.rs
aggregator/src/public_input_aggregation/: circuit.rs  config.rs  sub_circuit.rs  tests.rs
ffi/: Cargo.toml
ffi/src/: aggregator.rs  lib.rs  prove.rs  utils.rs  verify.rs  zkevm.rs
integration/: .gitignore  Cargo.toml  params  release.sh
integration/configs/: layer1.config  layer3.config  layer4.config  layer5.config
integration/outputs/e2e_tests_20241030_072344/: aggregation_snark_layer3_14519537609509643593.json  aggregation_snark_layer3_7849177596162890905.json  chunk_chunk_7156763.protocol  compression_snark_layer1_7156762.json  compression_snark_layer1_7156763.json  compression_snark_layer2_7156762.json  compression_snark_layer2_7156763.json  compression_snark_layer4_14519537609509643593.json  compression_snark_layer4_7849177596162890905.json  evm_verifier.yul  full_proof_batch_14519537609509643593.json  full_proof_batch_7849177596162890905.json  full_proof_batch_agg.json  full_proof_batch_prove_1.json  full_proof_batch_prove_2.json  full_proof_bundle_recursion.json  full_proof_chunk_0.json  full_proof_chunk_7156763.json  full_proof_evm_layer6_0xcfb9…7193.json  pi_bundle_recursion.data  proof_bundle_recursion.data  recursion_snark_layer5_0xcfb9…7193.json  vk_batch_agg.vkey  vk_bundle_recursion.vkey
integration/outputs/e2e_tests_20241107_065112/: aggregation_snark_layer3_14519537609509643593.json  aggregation_snark_layer3_7849177596162890905.json  compression_snark_layer1_7156762.json  compression_snark_layer1_7156763.json  compression_snark_layer2_7156762.json  compression_snark_layer2_7156763.json  compression_snark_layer4_14519537609509643593.json  compression_snark_layer4_7849177596162890905.json  full_proof_batch_prove_1.json  full_proof_batch_prove_2.json  full_proof_evm_layer6_0xcfb9…7193.json  proof_batch_14519537609509643593.json  proof_batch_7849177596162890905.json  proof_chunk_0.json  proof_chunk_7156763.json  protocol_batch_14519537609509643593.protocol  recursion_snark_layer5_0xcfb9…7193.json  vk_batch_agg.vkey  vk_chunk_7156762.vkey  vk_evm_layer6_0xcfb9…7193.vkey
integration/src/: capacity_checker.rs  evm.rs  l2geth.rs  lib.rs  mock.rs  prove.rs  test_util.rs  verifier.rs
integration/src/test_util/: capacity_checker.rs  mock_plonk.rs  proof.rs  prove.rs  types.rs
integration/tests/: aggregation_tests.rs  batch_tests.rs  bundle_tests.rs  chunk_tests.rs  download_trace.sh  e2e_tests.rs  fold_tests.rs  inner_tests.rs  integration.rs  mock_tests.rs  trace_dumper.py  unit_tests.rs
integration/tests/extra_traces/: new.json
integration/tests/test_data/: batch-task-no-encode.json  batch-task-with-blob-raw.json  batch-task-with-blob.json  batch_task.json  batch_task_69776.json  chunk_chunk_0.protocol  full_proof_1.json  full_proof_2.json  full_proof_batch_agg_1.json  full_proof_batch_agg_2.json  full_proof_batch_prove_1.json  recursion_snark_layer5.json
prover/: .gitignore  Cargo.toml  gupeng-tasks  release.sh
prover/batch-verify-data/: full_proof_evm_layer4_evm.json
prover/configs/: agg.config  agg_layer1.config  compression_thin.config  compression_wide.config  layer2.config  layer3.config  layer4.config  verify_circuit.config
prover/configs/l3_19_l4_26/: layer3.config
prover/configs/l3_20_l4_25/: layer3.config
prover/configs/l3_20_l4_26/: layer3.config
prover/gupeng-chunks/: full_proof_1.json
prover/gupeng-tasks/: full_proof_1-bak.json  full_proof_1.json
prover/gupeng-traces/chunk_450/: 780.json
prover/gupeng-traces/chunk_451/: 781.json
prover/gupeng-traces/chunk_452/: 782.json
prover/gupeng-traces/chunk_453/: 783.json
prover/gupeng-traces/chunk_454/: 784.json
prover/src/: aggregator.rs  common.rs  config.rs  consts.rs  evm_verifier.rs  inner.rs  io.rs  lib.rs  proof.rs  scroll_sp1.rs  test_util.rs  types.rs  utils.rs  zkevm.rs
prover/src/aggregator/: prover.rs  verifier.rs
prover/src/common/: prover.rs  verifier.rs
prover/src/inner/: prover.rs  verifier.rs
prover/src/proof/: batch.rs  chunk.rs  evm.rs
prover/src/prover/: outer_circuit.rs  outer_proof.rs
prover/src/test_util/: aggregator.rs  mock_plonk.rs  proof.rs
prover/src/zkevm/: capacity_checker.rs  circuit.rs  (+2 more)
prover/test_assets/: agg_vk.vkey
prover/tests/: aggregation_tests.rs  batch_tests.rs  chunk_tests.rs  compression_tests.rs  integration.rs  snark_verifier_api.rs
run-testnet/: Cargo.toml  README.md  run.sh
run-testnet/src/: main.rs
run-testnet/testnet_coordinator/: .gitignore  config.go  config.yaml.example  go.mod  main.go  notifier.go  task_assign.go
service/: Cargo.toml
service/src/: lib.rs  prove.rs  verify.rs
types/: Cargo.toml
types/src/: eth.rs  lib.rs  mpt.rs  roller.rs
zkevm/: .gitignore  Cargo.toml  release.sh
zkevm/configs/: example_evm_accumulator.config  verify_circuit.config
zkevm/data/: inner.snark
zkevm/src/: capacity_checker.rs  circuit.rs  io.rs  keygen.rs  lib.rs  proof.rs  prover.rs  sealer.rs  test_util.rs  utils.rs  verifier.rs
zkevm/tests/: README.md  aggregation_playground.rs  aggregation_tests.rs  dao.json  integration.rs  mock_plonk.rs  nft.json  snark_verifier_api.rs  sushi (1).json  sushi.json  test_util.rs  trace-bridge.json  trace-masterchef.json  trace-multiple-erc20.json  trace-native-transfer.json  trace-nft.json  trace-single-erc20-legacy.json
(+1559 files in other folders)
