[workspace]
resolver = "2"
members = [
    "bin",
    "integration",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
ethers-providers = "2"
glob = "0.3"
itertools = "0.10"
log = "0.4"
log4rs = { version = "1.2", default_features = false, features = ["console_appender", "file_appender"] }
rand = "0.8"
rand_xorshift = "0.3"
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }

halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1"  }
prover = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "feat/blob-4844-da", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "feat/blob-4844-da", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }

integration = { path = "integration" }

[patch.crates-io]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
ethers-providers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
ethers-signers  = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
halo2curves = { git = "https://github.com/scroll-tech/halo2curves", branch = "v0.1.0" }
#ethers-etherscan = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
#ethers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1"  }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "main" }
#[patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
#halo2wrong = { git = "https://github.com/scroll-tech/halo2wrong.git", branch = "halo2-ecc-snark-verifier-0323" }
#maingate = { git = "https://github.com/scroll-tech/halo2wrong", branch = "halo2-ecc-snark-verifier-0323" }
#[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
#halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }

[patch."https://github.com/scroll-tech/halo2-lib"]
halo2-base = { git = "https://github.com/z2trillion/halo2-lib", branch = "feat/bls_scalar" }
halo2-ecc = { git = "https://github.com/z2trillion/halo2-lib", branch = "feat/bls_scalar" }

[patch."https://github.com/privacy-scaling-explorations/bls12_381"]
bls12_381 = { git = "https://github.com/scroll-tech/bls12_381", branch = "feat/impl_scalar_field" }
[profile.test]
opt-level = 3
debug-assertions = true

[profile.release]
opt-level = 3
debug-assertions = true
