[workspace]
resolver = "2"
members = [
    "bin",
    "integration",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
ethers-providers = "2"
glob = "0.3"
itertools = "0.10"
log = "0.4"
log4rs = { version = "1.2", default_features = false, features = ["console_appender", "file_appender"] }
rand = "0.8"
rand_xorshift = "0.3"
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
rayon = "1"

halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1"  }
prover = { git = "https://github.com/scroll-tech/zkevm-circuits.git", tag = "v0.11.4", default-features = false, features = ["parallel_syn", "scroll"] }
integration = { path = "integration" }

[patch."https://github.com/scroll-tech/zkevm-circuits.git"]
prover = { git = "https://github.com/snarkify/zkevm-circuits", branch = "step-circuit" }
#prover = { path = "/Users/chao/opensource/scroll/zkevm-circuits/prover" }
[patch."https://github.com/scroll-tech/halo2.git"]
halo2_proofs = { git = "https://github.com/snarkify/halo2", branch = "snarkify/dev.scroll.alpha.2" }

[patch.crates-io]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves", branch = "v0.1.0" }
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
ethers-providers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
ethers-signers  = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
#ethers-etherscan = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
#ethers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/snarkify/halo2", branch = "snarkify/dev.scroll.alpha.2" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "main" }
[patch."https://github.com/privacy-scaling-explorations/bls12_381"]
bls12_381 = { git = "https://github.com/scroll-tech/bls12_381", branch = "feat/impl_scalar_field" }

[patch."https://github.com/scroll-tech/poseidon-circuit.git"]
poseidon-base = { package = "poseidon-base", git = "https://github.com/snarkify/scroll-poseidon-circuit", branch = "main" }
hash-circuit = { package = "poseidon-circuit",  git = "https://github.com/snarkify/scroll-poseidon-circuit", branch = "main"  }

[profile.test]
opt-level = 3
debug-assertions = true

[profile.release]
opt-level = 3
debug-assertions = true
