[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "expose-keccak-circuit-config" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "expose-keccak-circuit-config" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
ethers-core = "0.17.0"
rand = "0.8"