[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "expose-keccak-circuit-config" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "expose-keccak-circuit-config" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
ethers-core = "0.17.0"
rand = "0.8"
ark-std = "0.4.0"
log = "0.4"
env_logger = "0.10.0"
# itertools = "0.10.5"

[dev-dependencies]
halo2-base = { git = "https://github.com/scroll-tech/halo2-lib", branch = "halo2-ecc-snark-verifier-0323", default-features=false, features=["halo2-pse","display"] }
snark-verifier =  { git = "https://github.com/scroll-tech/snark-verifier", branch = "halo2-ecc-snark-verifier-0323" }
snark-verifier-sdk =  { git = "https://github.com/scroll-tech/snark-verifier", branch = "halo2-ecc-snark-verifier-0323" }


[features]
default = []
# default = [ "ark-std/print-trace" ]