[package]
name = "integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ethers-providers.workspace = true
anyhow.workspace = true
glob.workspace = true
itertools.workspace = true
log.workspace = true
log4rs.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
tokio.workspace = true

snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }
aggregator = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "v0.13"}

halo2_proofs.workspace = true
prover.workspace = true

[features]
default = ["prove_verify"]
prove_verify = []
fix_later = [] # commented codes
