[package]
name = "prover"
version = "0.8.1"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
zkevm_prover = { package = "prover", git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "develop", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }

anyhow = "1.0"
glob = "0.3.0"
log = "0.4"
log4rs = { version = "1.2.0", default_features = false, features = ["console_appender", "file_appender"] }
rand = "0.8"

[dev-dependencies]
itertools = "0.10.5"
serde = "1.0"
serde_derive = "1.0"
# TODO: should delete after moves related tests to zkevm-circuits.
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "develop", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }

[features]
default = []
prove_verify = []
