[package]
name = "scroll-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ethers-providers.workspace = true
anyhow.workspace = true
glob.workspace = true
itertools.workspace = true
log.workspace = true
log4rs.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
tokio.workspace = true

sp1-host = { git = "ssh://git@github.com/scroll-tech/sproll-evm.git", branch = "master", package = "sproll-host", default-features = false, features = []}
#sp1-host = { path = "../../sproll-evm/host", package = "sproll-host"}
sp1-halo2-backend = { git = "ssh://git@github.com/scroll-tech/sp1-halo2-wrap.git", package = "sp1-halo2-wrap"}
snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }

halo2_proofs.workspace = true
prover.workspace = true

[features]
default = ["sp1-hint"]
sp1-hint = ["sp1-host/sp1-hint"]
