[package]
name = "testnet-runner"
version = "0.6.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
ethers-providers = "1.0"
itertools = "0.10.5"
log = "0.4"
log4rs = { version = "1.2.0", default_features = false, features = ["console_appender", "file_appender"] }
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.66"
tar = "0.4"
flate2 = "1"
tokio = { version = "1", features = ["full"] }
types = { path = "../types" }
prover = { path = "../prover" }

