[package]
name = "zkevm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-snark-aggregator-circuit = { git = "https://github.com/scroll-tech/halo2-snark-aggregator", branch = "scroll-dev-1220" }
halo2-snark-aggregator-solidity = { git = "https://github.com/scroll-tech/halo2-snark-aggregator", branch = "scroll-dev-1220" }
halo2-snark-aggregator-api = { git = "https://github.com/scroll-tech/halo2-snark-aggregator", branch = "scroll-dev-1220" }

halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }

bus-mapping = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "scroll-dev-1220" }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "scroll-dev-1220" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "scroll-dev-1220", default-features = false, features = ["test","zktrie"] }
mpt-zktrie = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "scroll-dev-1220" }

mpt-circuits = { package = "halo2-mpt-circuits", git = "https://github.com/scroll-tech/mpt-circuit.git", branch = "scroll-dev-1220" }

rand = "0.8"
rand_xorshift = "0.3"
is-even = "1.0.0"
ethers-core = "0.17.0"
sha2 ="0.10.2"
hex = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.66"
types = { path = "../types", features = ["test"] }
log = "0.4"
anyhow = "1.0"
num-bigint = "0.4.3"
blake2 = "0.10.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
strum = "0.24"
strum_macros = "0.24"
once_cell = "1.8.0"
chrono = "0.4.19"
itertools = "0.10.5"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.13.0"

[features]
#default = ["prove_verify"]
default = []
prove_verify = []

[dev-dependencies]
git-version = "0.3.5"
glob = "0.3.0"
