[package]
name = "zkevm"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }

bus-mapping = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "feat/sealer_api" }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "feat/sealer_api" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "feat/sealer_api", default-features = false, features = ["test","scroll","poseidon-codehash-lookup"] }
mpt-zktrie = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "feat/sealer_api" }
mock = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "feat/sealer_api" }

snark-verifier =  { git = "https://github.com/scroll-tech/snark-verifier", branch = "halo2-ecc-snark-verifier-0323" }
snark-verifier-sdk =  { git = "https://github.com/scroll-tech/snark-verifier", branch = "halo2-ecc-snark-verifier-0323" }

rand = "0.8"
rand_xorshift = "0.3"
is-even = "1.0.0"
ethers-core = "0.17.0"
sha2 ="0.10.2"
hex = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.66"
types = { path = "../types", features = ["test"] }
log = "0.4"
anyhow = "1.0"
num-bigint = "0.4.3"
blake2 = "0.10.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
strum = "0.24"
strum_macros = "0.24"
once_cell = "1.8.0"
chrono = "0.4.19"
itertools = "0.10.5"
git-version = "0.3.5"
glob = "0.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.13.0"

[features]
#default = []
 default = ["prove_verify"]
prove_verify = []

