[package]
name = "zkevm"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }

bus-mapping = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "repro/trace_dumper-debugging_2" }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "repro/trace_dumper-debugging_2" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "repro/trace_dumper-debugging_2", default-features = false, features = ["test","scroll","poseidon-codehash-lookup"] }
mpt-zktrie = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "repro/trace_dumper-debugging_2" }
mock = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "repro/trace_dumper-debugging_2" }

snark-verifier =  { git = "https://github.com/scroll-tech/snark-verifier", branch = "halo2-ecc-snark-verifier-0323" }
snark-verifier-sdk =  { git = "https://github.com/scroll-tech/snark-verifier", branch = "halo2-ecc-snark-verifier-0323" }

rand = "0.8"
rand_xorshift = "0.3"
is-even = "1.0.0"
ethers-core = "0.17.0"
sha2 ="0.10.2"
hex = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
serde_stacker = "0.1"
serde_json = { version = "1.0.66", features = ["unbounded_depth"] }
types = { path = "../types", features = ["test"] }
log = "0.4"
log4rs = { version = "1.2.0", default_features = false, features = ["console_appender", "file_appender"] }
anyhow = "1.0"
num-bigint = "0.4.3"
blake2 = "0.10.3"
dotenv = "0.15.0"
strum = "0.24"
strum_macros = "0.24"
once_cell = "1.8.0"
chrono = "0.4.19"
itertools = "0.10.5"
git-version = "0.3.5"
glob = "0.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.13.0"

[features]
default = []
# default = ["prove_verify"]
prove_verify = []

